@@ -1,8 +1,14 @@
-<!-- Automagically generated by the ToDo program on 03/31/05, 13:26 -->
+<!-- Automagically generated by the ToDo program on 2005-03-31 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
+    <note priority="veryhigh" time="1112320216">
+        Fix bug where -pv will color all lines blue except the first
+    </note>
+    <note priority="veryhigh" time="1112322341">
+        Show maintainer desc and full name if --verbose in meta handler.
+    </note>
     <note priority="high" time="1112189373">
         Add --with-cat= for only displaying packages in a certain category. Could work with -p and -pd.
     </note>
